fix code wrap

--- a/public/css/parts/prettify.styl
+++ b/public/css/parts/prettify.styl
@@ -109,7 +109,8 @@ li.L8 {
 pre.prettyprint {
     margin: 1em 0;
     padding: 1em;
-    border-radius: 4px
+    border-radius: 4px;
+    white-space: pre-wrap;
 }
 
 .pln {
